--- a/index.html
+++ b/index.html
@@ -137,10 +137,20 @@
 
   <!-- contact section -->
   <section id="contact">
-    <h1>Hire Me</h1>
+    <h1>Hire Me<i class="far fa-envelope"></i></h1>
+    <input type="text" value="jayrbsn@gmail.com" id="myInp">
+    <button class="btn btn-small btn-outline-secondary" id="btnCopy">Copy to Clipboard</button>
+  </section>
 
+  <hr class="last-hr">
+
+
+  <!-- footer -->
+  <section id="footer">
+    <a class="footer-link" href="https://jayrbsn.github.io/Custodian-Websites/" target="_blank">Made with <i class="far fa-heart"></i> by Custodian Websites</a>
   </section>
 
 </body>
+
 
 </html>
