--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
+  
+<!-- javascript -->
+<script type="text/javascript">
+  const myInp = document.getElementById("myInp");
+  const btnCopy = document.getElementById("btnCopy");
+
+  btnCopy.onclick = function() {
+    myInp.select();
+
+    document.execCommand("Copy");
+  };
+</script>
 
 
 </html>
