--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- nav section -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="about.html">
+      <a class="navbar-brand" href="#contact">
         <h1 class="logo">Jarryd Robson CV</h1>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
